# context-engine

./: .clippy.toml  .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
context-engine-core/: Cargo.toml
context-engine-core/proptest-regressions/types/tests/: location.txt  range.txt  uri.txt
context-engine-core/src/: lib.rs
context-engine-core/src/types/: mod.rs
context-engine-core/src/types/lsp/: error.rs  location.rs  mod.rs  position.rs  range.rs  uri.rs
context-engine-core/src/types/lsp/tests/: location.rs  position.rs  range.rs  uri.rs
context-engine-server/: Cargo.toml
context-engine-server/src/: main.rs
context-engine-tests/: Cargo.toml
context-engine-tests/src/: helpers.rs  lib.rs
context-engine-tests/tests/: ci_pipeline_tests.rs  dev_tools_tests.rs  workspace_tests.rs
