[workspace]
members = ["context-engine-core", "context-engine-server", "context-engine-tests"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Arthur Welf"]
license = "Apache-2.0"
repository = "https://github.com/welf/context-engine"
homepage = "https://github.com/welf/context-engine"
documentation = "https://docs.rs/context-engine"
keywords = ["mcp", "lsp", "context", "code-analysis", "ai", "ai-tools"]
categories = ["development-tools", "text-processing"]

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.45.1", features = ["full"] }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "2.0.1"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Development dependencies
tokio-test = "0.4"
tempfile = "3.20"
pretty_assertions = "1.4"
proptest = "1.6.0"
arbitrary = { version = "1.4.1", features = ["derive"] }
insta = { version = "1.43.1", features = ["ron"] }

[workspace.lints.rust]
rust-2024-compatibility = "warn"
missing_docs = "warn"
unsafe_code = "forbid"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true
overflow-checks = true
