[package]
name = "context-engine-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/context-engine-core"
keywords.workspace = true
categories.workspace = true
description = "Core functionality for the Context Engine"

[dependencies]
# Async runtime
tokio = { workspace = true }

# LSP and Tree-sitter utilities
lsp-types = { workspace = true }

# Serialization
bincode = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []

[lints]
workspace = true
