[package]
name = "context-engine-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Context Engine MCP Server"

[[bin]]
name = "context-engine-server"
path = "src/main.rs"

[dependencies]
# Internal dependencies
context-engine-core = { path = "../context-engine-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = []

[lints]
workspace = true
